@@ -1,3 +1,7 @@
+2000-12-31  Bruno Haible  <haible@clisp.cons.org>
+
+	* hash.c (insert_entry): Use obstack_copy instead of obstack_copy0.
+
 2000-12-30  Bruno Haible  <haible@clisp.cons.org>
 
 	* system.h (open_po_file): Remove declaration.
